	  kconfig-frontends tools (2014-3-3).
	* configs/stm3220g-eval/dhcpd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3).
	* configs/stm3240g-eval/dhcpd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3).
	* configs/lpcxpresso-lpc1768/dhcpd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/olimex-lpc1766stk/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/nucleus2g/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/lpcxpresso-lpc1768/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/stm3210e-eval/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/hymini-stm32v/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/ea3131/usbmsc: Configuration removed.  It could not possible
	  useful because there is no MCI driver for the EA3131 (2014-3-3)
	* configs/mcu123-lpc214x/usbmsc: Configuration converted to use the
	  kconfig-frontends tools (2014-3-3)
	* configs/teensy/nettest: Configuration converted to use the kconfig-frontends
	  tools (2014-3-3).
	* configs/*/dhcpd:  Add missing DHCPD configuration settings (2014-3-3).
	* configs/stm32f4discovery/pm: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)
	* configs/stm3210e-eval/pm: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)
	* configs/stm3240g-eval/nxconsole: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)
	* configs/stm3210e-eval/nxconsole: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)
	* configs/stm3240g-eval/telnetd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)
	* configs/stm3220g-eval/telnetd: Configuration converted to use the
	  kconfig-frontends tools (2014-3-4)